fix(welcomer): increase z-index

--- a/app/Screens/Home/style/welcomer.scss
+++ b/app/Screens/Home/style/welcomer.scss
@@ -13,7 +13,7 @@
     animation: welcomer-slideOut 0.7s 4.5s cubic-bezier(0.45, 0.02, 0.09, 0.98)
         forwards;
 
-    z-index: 1;
+    z-index: 10;
 
     @keyframes welcomer-slideOut {
         from {
